generic api respinse
