# public/swagger.json
@@ -18,6 +18,102 @@
 				"type": "object",
 				"additionalProperties": false
 			},
+			"StatusCode": {
+				"enum": [
+					100,
+					101,
+					102,
+					103,
+					200,
+					201,
+					202,
+					203,
+					204,
+					205,
+					206,
+					207,
+					208,
+					226,
+					300,
+					301,
+					302,
+					303,
+					304,
+					305,
+					306,
+					307,
+					308,
+					400,
+					401,
+					402,
+					403,
+					404,
+					405,
+					406,
+					407,
+					408,
+					409,
+					410,
+					411,
+					412,
+					413,
+					414,
+					415,
+					416,
+					417,
+					418,
+					421,
+					422,
+					423,
+					424,
+					425,
+					426,
+					428,
+					429,
+					431,
+					451,
+					500,
+					501,
+					502,
+					503,
+					504,
+					505,
+					506,
+					507,
+					508,
+					510,
+					511
+				],
+				"type": "number"
+			},
+			"APIResponse_string_": {
+				"properties": {
+					"statusCode": {
+						"$ref": "#/components/schemas/StatusCode"
+					},
+					"statusText": {
+						"type": "string"
+					},
+					"description": {
+						"type": "string"
+					},
+					"message": {
+						"type": "string"
+					},
+					"data": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"statusCode",
+					"statusText",
+					"description",
+					"message",
+					"data"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
 			"User": {
 				"properties": {
 					"id": {
@@ -85,7 +181,8 @@
 				"name": "jwt",
 				"type": "jwt",
 				"scopes": {
-					"read:project": "read project"
+					"read:project": "read project",
+					"write:project": "write project"
 				}
 			}
 		}
@@ -149,7 +246,7 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"$ref": "#/components/schemas/PingResponse"
+									"$ref": "#/components/schemas/APIResponse_string_"
 								}
 							}
 						}
