# src/interface/IAPIResponse.ts
@@ -1,0 +1,8 @@
+import { StatusCode } from './common/StatusCode';
+export interface IAPIResponse<T> {
+    statusCode: StatusCode,
+    statusText: string;
+    description:string;
+    message:string;
+    data:T
+}
