# src/interface/ResponseModel.ts
@@ -1,5 +1,0 @@
-export interface ResponseModel {
-    id: number;
-    statusCode: number,
-    status: string;
-}
